--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <!-- Large Button Start -->
                 <div class="large-btn">
                     <div class="content-inner">
-                        <a class="btn" href="/img/Bhoomish resume.pdf"><i class="fa fa-download"></i>Resume</a>
+                        <a class="btn" href="/Bhoomish resume.pdf"><i class="fa fa-download"></i>Resume</a>
                         <a class="btn" href="https://linktr.ee/bhoomishva?utm_source=linktree_admin_share"><i class="fa fa-eye"></i>LinkTree</a>
                     </div>
                 </div>
