--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="content-inner">
                         <p>I'm</p>
                         <h1>V A Bhoomish</h1>
-                        <h2></h2>
+                        <h2><p><a href="/Bhoomish resume.pdf" style="color: blue;">Click here</a> to explore it.</p></h2>
                         <div class="typed-text">Web Designer, Web Developer, Software developer</div>
                     </div>
                 </div>
