--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="content-inner">
                         <p>I'm</p>
                         <h1>V A Bhoomish</h1>
-                        <h2><p><a href="/Bhoomish resume.pdf" style="color: blue;">Click here</a> to explore it.</p></h2>
+                        
                         <div class="typed-text">Web Designer, Web Developer, Software developer</div>
                     </div>
                 </div>
@@ -100,7 +100,9 @@
                                 <p style="text-align: justify;">
                         
                                     As a second-year Computer Science and Engineering student at Dr. Mahalingam College, Pollachi, I am a driven software developer with a passion for innovation. Self-motivated and analytical, I thrive on challenges, utilizing logical thinking to solve complex problems. With a keen interest in technology, I am dedicated to honing my skills and contributing to the ever-evolving field of software development. 
-                                </p>                          </div>
+                                </p>            
+                                <h2><p><a href="/Bhoomish resume.pdf" style="color: blue;">Click here</a> to explore it.</p></h2>
+                            </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
