--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <!-- Large Button Start -->
                 <div class="large-btn">
                     <div class="content-inner">
-                        <a class="btn" href="/Bhoomish resume.pdf"><i class="fa fa-download"></i>Resume</a>
+                        <a class="btn" href="Bhoomish resume.pdf"><i class="fa fa-download"></i>Resume</a>
                         <a class="btn" href="https://linktr.ee/bhoomishva?utm_source=linktree_admin_share"><i class="fa fa-eye"></i>LinkTree</a>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                         
                                     As a second-year Computer Science and Engineering student at Dr. Mahalingam College, Pollachi, I am a driven software developer with a passion for innovation. Self-motivated and analytical, I thrive on challenges, utilizing logical thinking to solve complex problems. With a keen interest in technology, I am dedicated to honing my skills and contributing to the ever-evolving field of software development. 
                                 </p>            
-                                <h2><p><a href="/Bhoomish resume.pdf" style="color: blue;">Click here</a> to explore it.</p></h2>
+                              
                             </div>
                         </div>
                         <div class="row">
