--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Resume Website Template Free Download" name="keywords">
         <meta content="Resume Website Template Free Download" name="description">
+        <meta name="google-site-verification" content="TQfpOOVkAP4sKMu4w1AZm2LGX1-DSTvrGDXMgijIzcQ" />
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -22,6 +23,7 @@
         <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
         <!-- Template Stylesheet -->
+        
         <link href="css/style.css" rel="stylesheet">
     </head>
 
