--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="message-box">                        
                         <h2>About.</h2>
                         <p style="text-align: justify;">  As a third-year Computer Science and Engineering student at Dr. Mahalingam College, Pollachi, I am a driven software developer with a passion for innovation. Self-motivated and analytical, I thrive on challenges, utilizing logical thinking to solve complex problems. With a keen interest in technology.<br> I am dedicated to honing my skills and contributing to the ever-evolving field of software development. </p>
-                        <a href="resume.pdf" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a>
+                        <a href="Resume.pdf" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
     
