--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
 			<h3 class="cd-headline clip is-full-width">
 				<span>Creating innovative solutions across </span>
 				<span class="cd-words-wrapper">
-					<b class="is-visible">Back-end development</b>
-					<b>Express JS </b>
-					<b>Django</b>
+					<b class="is-visible">Problem Solving</b>
+					<b>MERN stack </b>
 					<b>WordPress</b>
 				</span>
 			</h3>
