--- a/index.html
+++ b/index.html
@@ -561,3 +561,5 @@
 
 </body>
 </html>
+<script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/02/11/18/20250211184141-YIG906RP.js"></script>
